fixed spacing problems

--- a/final/styles/base.css
+++ b/final/styles/base.css
@@ -380,3 +380,7 @@ footer {
     font-size: 20px;
     padding-bottom: 2rem;
 }
+
+.prompt {
+    padding: 2rem;
+}
